--- a/airline-android/app/src/main/res/values/strings.xml
+++ b/airline-android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Airline</string>
     <string name="add_airline_or_flight">Press to add new airlines or flights</string>
+    <string name="project_6">Project 6</string>
+    <string name="search_hint">Search for an airline or a flight</string>
 </resources>
