--- a/airline-android/app/src/main/res/values/strings.xml
+++ b/airline-android/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="airline_name">Airline Name</string>
     <string name="help_menu">Press to view help menu</string>
     <string name="home">Press to return to home</string>
+    <string name="duration_eg">60 minutes.</string>
 
 </resources>
