Reading new flight info

--- a/airline-android/app/src/main/res/values/strings.xml
+++ b/airline-android/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="home">Press to return to home</string>
     <string name="duration_eg">60 minutes.</string>
     <string name="help">Help</string>
+    <string name="internalStoragePath">persistentAirlines</string>
 
 </resources>
